# lemma-platform

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  e2e.yml  release-lemma-terminal.yml  release-local-images.yml  windows-daemon.yml
agentbox/: .gitignore  Dockerfile  Dockerfile.runtime  Makefile  README.md
agentbox/agentbox/: config.py  function_executor.py
agentbox/agentbox/providers/: docker.py
agentbox/tests/: test_function_executor.py
agentbox/tests/e2e/: conftest.py  test_function_executor_e2e.py
awesome-lemma-pods/task-arcade/: .gitignore  README.md  pod.json
awesome-lemma-pods/task-arcade/assets/: README.md
awesome-lemma-pods/task-arcade/seed/: seed-catalogue-items.jsonl  seed-sprints.jsonl  seed-tasks.jsonl  seed-team-members.jsonl  (+1 more)
awesome-lemma-pods/trumpet/: .gitignore  README.md  pod.json
docs/: installation.md
docs/design/: pod-bundle-share-import.md
docs/growth/: share-import-story.md
lemma-backend/: Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  run_full_e2e.sh
lemma-backend/app/: app.py  mcp_server.py  scheduler.py  version.py
lemma-backend/docs/: development.md  e2e_fast_mode_plan.md
lemma-backend/load_tests/: .gitignore  ANALYSIS_bottlenecks.md  REPORT_100_users.md  REPORT_full_surface_100u.md  db_monitor.py  docker-compose.load-test.yml  docker-compose.workers.yml  docker_stats.py  journey.js  micro.js  sse_concurrent.js
lemma-backend/scripts/: import_connector_catalog.py  lemma_apps_config.json
lemma-cli/: pyproject.toml
lemma-cli/lemma_cli/: __init__.py
lemma-cli/tests/: test_codex_pool_bounding.py  test_daemon_cli.py  test_daemon_process.py  test_daemon_resiliency.py  test_opencode_tool_parts.py  test_pod_bundle.py  test_pod_requirements.py  test_scaffold.py  test_skills_command.py
lemma-frontend/: .env.example  next.config.ts  package-lock.json
lemma-frontend/scripts/: audit-design-system.mjs  design-audit-baseline.json
lemma-pod-bundle/: README.md  pyproject.toml
lemma-pod-bundle/lemma_pod_bundle/: __init__.py  archive.py  bundle.py  diff.py  jsonc.py  layout.py  normalize.py  portability.py  requirements.py
lemma-pod-bundle/tests/: test_archive.py  test_diff.py  test_jsonc.py  test_layout.py  test_normalize.py  test_portability.py  test_requirements.py
lemma-python/: README.md  pyproject.toml
lemma-python/lemma_sdk/: _spec_info.py  openapi_spec.json
lemma-python/tests/: test_docs_surface.py  test_sdk_coverage.py
lemma-skills/lemma-builder/: SKILL.md
lemma-stack/: README.md
lemma-stack/lemma_stack/: app.py  register.py
lemma-stack/tests/: test_specs.py
lemma-typescript/: package-lock.json  package.json
lemma-typescript/public/: lemma-client.js
lemma-typescript/src/: version.ts
(+597 files in other folders)
