[project]
name = "lemma-pod-bundle"
version = "0.1.3"
description = "Shared pod-bundle logic — requirements/capabilities extraction, table-column diff, and JSONC parsing — used by both lemma-cli and lemma-backend so the import experience has one source of truth."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lemma_pod_bundle"]
